--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-DATABASE = mongodb+srv://12210024gcit:PASSWORD@cluster0.xwfnvgf.mongodb.net/epharmacist?retryWrites=true&w=majority
+DATABASE = mongodb+srv://12210024gcit:<password>@cluster0.ntpvqih.mongodb.net/
 DATABASE_LOCAL = mongodb://localhost:27017/epharmacist
 DATABASE_PASSWORD = qwertyuiop
 
